# rp-transform-study

./: .env  Cargo.toml  README.md  article.md  docker-compose.yaml
crypto-transform-hub/: Cargo.toml  crypto-transform-hub.wasm  transform.yaml
crypto-transform-hub/src/: binance.rs  coinbase.rs  lib.rs  main.rs  okx.rs
db/: Dockerfile  setup.sql
load-data/: Cargo.toml
setup-transform/: Cargo.toml
src/: lib.rs  main.rs
