[package]
name = "load-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
samsa = "0.1.7"
tokio = { version = "1.37.0", features = ['full'] }
tokio-stream = "0.1.15"
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = "0.21.0"
url = "2.5.0"
